fix: Use spacing scale

--- a/src/app.css
+++ b/src/app.css
@@ -18,9 +18,29 @@
 	--color-badge-roadtrip-bg: #d1fae5;
 	--color-badge-roadtrip: #059669;
 
+	/* Spacing */
+	--space-1: 0.125rem;
+	--space-2: 0.25rem;
+	--space-3: 0.375rem;
+	--space-4: 0.5rem;
+	--space-5: 0.625rem;
+	--space-6: 0.75rem;
+	--space-8: 1rem;
+	--space-10: 1.25rem;
+	--space-12: 1.5rem;
+	--space-14: 1.75rem;
+	--space-16: 2rem;
+	--space-20: 2.5rem;
+	--space-30: 3.75rem;
+
+	/* Layout */
+	--max-width: 960px;
+
 	/* Typography */
-	--font-sans: 'Inter', system-ui, -apple-system, sans-serif;
-	--font-mono: 'JetBrains Mono', 'Fira Code', monospace;
+	--font-sans:
+		-apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, Adwaita Sans, Cantarell, Ubuntu,
+		roboto, noto, helvetica, arial, sans-serif;
+	--font-mono: Menlo, Consolas, Monaco, Adwaita Mono, Liberation Mono, Lucida Console, monospace;
 
 	font-family: var(--font-sans);
 	line-height: 1.5;
@@ -75,7 +95,7 @@ body {
 code {
 	font-family: var(--font-mono);
 	font-size: 0.875em;
-	padding: 2px 6px;
+	padding: var(--space-1) var(--space-3);
 	background: var(--color-bg-hover);
 	border-radius: 4px;
 }
